Add -Xmx512m -XX:MaxPermSize=350m